--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
             <footer class="footer">
                 <p class="footer__copyright">© 2021 Around The U.S.</p>
             </footer>
-            <div class="modal modal_closed">
+            <div class="modal modal_type_profile modal_closed">
                 <div class="modal__container">
-                    <button type="button" class="modal__close-btn" aria-label="close button" name="close button"></button>
+                    <button type="button" class="modal__close-btn modal__close-profile" aria-label="close button" name="close button"></button>
                     <form class="form" action="/" name="form">
                         <fieldset class="form__fieldset">
                             <h2 class="form__title">Edit Profile</h2>
@@ -51,7 +51,7 @@
             </div>
             <div class="modal modal_type_add-element modal_closed">
                 <div class="modal__container">
-                    <button type="button" class="modal__close-btn" aria-label="close button" name="close button"></button>
+                    <button type="button" class="modal__close-btn modal__close-add" aria-label="close button" name="close button"></button>
                     <form class="form form-element" action="/" name="form__add-element">
                         <fieldset class="form__fieldset">
                             <h2 class="form__title">New place</h2>
@@ -76,7 +76,7 @@
             </template>
             <div class="modal modal_type_pop-up modal_closed">
                 <div class="modal__container modal__container_type_popup">
-                    <button type="button" class="modal__close-popup" aria-label="close button popup" name="popup close button"></button>
+                    <button type="button" class="modal__close-btn modal__close-popup" aria-label="close button popup" name="popup close button"></button>
                     <img class="modal__img" />
                     <h2 class="modal__title"></h2>
                 </div>
