ready for submition

--- a/index.html
+++ b/index.html
@@ -27,10 +27,8 @@
                     <button class="profile__add-btn" aria-label="add button" name="add button" type="button"></button>
                 </div>
 
-                <section class="elements">  
-                    <div class="element"> 
-
-                    </div>
+                <section class="elements">
+                    <div class="element"></div>
                 </section>
             </main>
             <footer class="footer">
@@ -39,11 +37,14 @@
             <div class="modal modal_type_profile modal_closed">
                 <div class="modal__container">
                     <button type="button" class="modal__close-btn modal__close-profile" aria-label="close button" name="close button"></button>
-                    <form class="form" action="/" name="form">
+                    <form class="form" action="/" name="form" novalidate>
                         <fieldset class="form__fieldset">
                             <h2 class="form__title">Edit Profile</h2>
-                            <input type="text" name="name" class="form__text-input form__text-input_type_name" id="name" />
-                            <input type="text" name="job" class="form__text-input form__text-input_type_job" id="job" />
+                            <input id="name-input" type="text" name="name" class="form__text-input form__text-input_type_name" minlength="2" maxlength="40" required />
+                            <span id="name-input-error" class="input_theme_error"> </span>
+
+                            <input id="job-input" type="text" name="job" class="form__text-input form__text-input_type_job" minlength="2" maxlength="200" required />
+                            <span id="job-input-error" class="input_theme_error"> </span>
                             <button type="submit" name="submit button" class="form__submit-btn">Save</button>
                         </fieldset>
                     </form>
@@ -52,11 +53,14 @@
             <div class="modal modal_type_add-element modal_closed">
                 <div class="modal__container">
                     <button type="button" class="modal__close-btn modal__close-add" aria-label="close button" name="close button"></button>
-                    <form class="form form-element" action="/" name="form__add-element">
+                    <form class="form form-element" action="/" name="form__add-element" novalidate>
                         <fieldset class="form__fieldset">
                             <h2 class="form__title">New place</h2>
-                            <input type="text" name="name-element" class="form__text-input form__text-input_type_name-element" id="name-element" placeholder="Title" />
-                            <input type="url" name="img-element" class="form__text-input form__text-input_type_img-element" id="img-element" placeholder="Image Url" />
+                            <input id="name-element-input" type="text" name="name-element" class="form__text-input form__text-input_type_name-element" placeholder="Title" minlength="1" maxlength="30" required />
+                            <span id="name-element-input-error" class="input_theme_error"> </span>
+
+                            <input id="img-element-input" type="url" name="img-element" class="form__text-input form__text-input_type_img-element" placeholder="Image Url" required />
+                            <span id="img-element-input-error" class="input_theme_error"> </span>
                             <button type="submit" name="submit button" class="form__submit-btn">Create</button>
                         </fieldset>
                     </form>
@@ -65,11 +69,11 @@
             <template id="element-template">
                 <div class="elements">
                     <div class="element">
-                        <button type="button" class="element__delete" name="delete buttom"><img src="./images/Trash.png" alt="delete"></button>
-                        <img class="element__image"/>
+                        <button type="button" class="element__delete" name="delete buttom"><img src="./images/Trash.png" alt="delete" /></button>
+                        <img class="element__image" />
                         <div class="element__description">
                             <h2 class="element__title"></h2>
-                            <button type="button" class="element__like-btn" aria-label="like-buttom"><img src="./images/like-btn.svg" alt="like-btn"></button>
+                            <button type="button" class="element__like-btn" aria-label="like-buttom"><img src="./images/like-btn.svg" alt="like-btn" /></button>
                         </div>
                     </div>
                 </div>
@@ -82,6 +86,8 @@
                 </div>
             </div>
             <script type="module" src="./scripts/scripts.js"></script>
+            <script type="module" src="./scripts/validation.js"></script>
         </div>
     </body>
 </html>
+
