--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
             <div class="modal modal_type_pop-up modal_closed">
                 <div class="modal__container modal__container_type_popup">
                     <button type="button" class="modal__close-btn modal__close-popup" aria-label="close button popup" name="popup close button"></button>
-                    <img class="modal__img" src="" alt=""/>
+                    <img class="modal__img"/>
                     <h2 class="modal__title"></h2>
                 </div>
             </div>
