--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@
                         <fieldset class="form__fieldset">
                             <h2 class="form__title">Edit Profile</h2>
                             <input id="name-input" type="text" name="name" class="form__text-input form__text-input_type_name" minlength="2" maxlength="40" required />
-                            <span id="name-input-error" class="input__theme_error"> </span>
+                            <span id="name-input-error" class="form__input-error"> </span>
 
                             <input id="job-input" type="text" name="job" class="form__text-input form__text-input_type_job" minlength="2" maxlength="200" required />
-                            <span id="job-input-error" class="input__theme_error"> </span>
+                            <span id="job-input-error" class="form__input-error"> </span>
                             <button type="submit" name="submit button" class="form__submit-btn">Save</button>
                         </fieldset>
                     </form>
@@ -57,10 +57,10 @@
                         <fieldset class="form__fieldset">
                             <h2 class="form__title">New place</h2>
                             <input id="name-element-input" type="text" name="name-element" class="form__text-input form__text-input_type_name-element" placeholder="Title" minlength="1" maxlength="30" required />
-                            <span id="name-element-input-error" class="input__theme_error"> </span>
+                            <span id="name-element-input-error" class="form__input-error"> </span>
 
                             <input id="img-element-input" type="url" name="img-element" class="form__text-input form__text-input_type_img-element" placeholder="Image Url" required />
-                            <span id="img-element-input-error" class="input__theme_error"> </span>
+                            <span id="img-element-input-error" class="form__input-error"> </span>
                             <button type="submit" name="submit button" class="form__submit-btn">Create</button>
                         </fieldset>
                     </form>
@@ -81,7 +81,7 @@
             <div class="modal modal_type_pop-up modal_closed">
                 <div class="modal__container modal__container_type_popup">
                     <button type="button" class="modal__close-btn modal__close-popup" aria-label="close button popup" name="popup close button"></button>
-                    <img class="modal__img" alt="" src="/"/>
+                    <img class="modal__img" alt="/" src="/"/>
                     <h2 class="modal__title"></h2>
                 </div>
             </div>
