--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
             </div>
             <script type="module" src="./scripts/scripts.js"></script>
             <script type="module" src="./scripts/validation.js"></script>
+            <script type="module" src="./scripts/card.js"></script>
         </div>
     </body>
 </html>
