ready for submit

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <div class="modal modal_type_profile modal_closed">
                 <div class="modal__container">
                     <button type="button" class="modal__close-btn modal__close-profile" aria-label="close button" name="close button"></button>
-                    <form class="form form-profile" action="/" name="form" novalidate>
+                    <form class="form" action="/" name="form" novalidate>
                         <fieldset class="form__fieldset">
                             <h2 class="form__title">Edit Profile</h2>
                             <input id="name-input" type="text" name="name" class="form__text-input form__text-input_type_name" minlength="2" maxlength="40" required />
@@ -86,7 +86,6 @@
                 </div>
             </div>
             <script type="module" src="./scripts/scripts.js"></script>
-           <!--<script type="module" src="./scripts/FormValidator.js"></script> -->
         </div>
     </body>
 </html>
