--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                     <h2 class="modal__title"></h2>
                 </div>
             </div>
-            <script type="module" src="./scripts/scripts.js"></script>
+            <script type="module" src="./scripts/index.js"></script>
         </div>
     </body>
 </html>
