--- a/index.html
+++ b/index.html
@@ -69,11 +69,11 @@
             <template id="element-template">
                 <div class="elements">
                     <div class="element">
-                        <button type="button" class="element__delete" name="delete buttom"><img src="./images/Trash.png" alt="delete" /></button>
+                        <button type="button" class="element__delete" name="delete button"><img src="./images/Trash.png" alt="delete" /></button>
                         <img class="element__image" />
                         <div class="element__description">
                             <h2 class="element__title"></h2>
-                            <button type="button" class="element__like-btn" aria-label="like-buttom"><img src="./images/like-btn.svg" alt="like-btn" /></button>
+                            <button type="button" class="element__like-btn" aria-label="like-button"><img src="./images/like-btn.svg" alt="like-btn" /></button>
                         </div>
                     </div>
                 </div>
@@ -85,7 +85,7 @@
                     <h2 class="modal__title"></h2>
                 </div>
             </div>
-            <script type="module" src="./scripts/index.js"></script>
+            <script type="module" src="./src/index.js"></script>
         </div>
     </body>
 </html>
