popimagee & submit btn left

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 </div>
 
                 <section class="elements">
-                    <div class="element"></div>
+                    
                 </section>
             </main>
             <footer class="footer">
@@ -56,10 +56,10 @@
                     <form class="form form-element" action="/" name="form__add-element" novalidate>
                         <fieldset class="form__fieldset">
                             <h2 class="form__title">New place</h2>
-                            <input id="name-element-input" type="text" name="name-element" class="form__text-input form__text-input_type_name-element" placeholder="Title" minlength="1" maxlength="30" required />
+                            <input id="name-element-input" type="text" name="name" class="form__text-input form__text-input_type_name-element" placeholder="Title" minlength="1" maxlength="30" required />
                             <span id="name-element-input-error" class="form__input-error"> </span>
 
-                            <input id="img-element-input" type="url" name="img-element" class="form__text-input form__text-input_type_img-element" placeholder="Image Url" required />
+                            <input id="img-element-input" type="url" name="link" class="form__text-input form__text-input_type_img-element" placeholder="Image Url" required />
                             <span id="img-element-input-error" class="form__input-error"> </span>
                             <button type="submit" name="submit button" class="form__submit-btn">Create</button>
                         </fieldset>
