--- a/src/index.html
+++ b/src/index.html
@@ -4,19 +4,19 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link rel="stylesheet" href="./pages/index.css" />
+        <link rel="stylesheet" href="./src/pages/index.css" />
         <title>Around The U.S.</title>
     </head>
 
     <body class="page">
         <div class="page__container">
             <header class="header">
-                <img class="header__logo" src="./images/Vector.svg" alt="header-logo" />
+                <img class="header__logo" src="<%=require('./images/Vector.svg')%>" alt="header-logo" />
             </header>
 
             <main>
                 <div class="profile">
-                    <img class="profile__avatar" src="./images/image.png" alt="profile picture" />
+                    <img class="profile__avatar" src="<%=require('./images/image.png')%>" alt="profile picture" />
                     <div class="profile__info">
                         <div class="profile__info-top">
                             <h1 class="profile__title">Jacques Cousteau</h1>
@@ -69,11 +69,11 @@
             <template id="element-template">
                 <div class="elements">
                     <div class="element">
-                        <button type="button" class="element__delete" name="delete button"><img src="./images/Trash.png" alt="delete" /></button>
+                        <button type="button" class="element__delete" name="delete button"></button>
                         <img class="element__image" />
                         <div class="element__description">
                             <h2 class="element__title"></h2>
-                            <button type="button" class="element__like-btn" aria-label="like-button"><img src="./images/like-btn.svg" alt="like-btn" /></button>
+                            <button type="button" class="element__like-btn" aria-label="like-button"><img src="<%=require('./images/like-btn.svg')%>" alt="like-btn" /></button>
                         </div>
                     </div>
                 </div>
@@ -85,7 +85,7 @@
                     <h2 class="modal__title"></h2>
                 </div>
             </div>
-            <script type="module" src="./src/index.js"></script>
+            <script type="module" src="./src/pages/index.js"></script>
         </div>
     </body>
 </html>
