--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,9 @@
 
             <main>
                 <div class="profile">
-                    <img class="profile__avatar" src="<%=require('./images/image.png')%>" alt="profile picture" />
+                    <button class="profile__change-avatar"aria-label="edit picture" name="edit picture" type="button">
+                        <img class="profile__avatar" src="<%=require('./images/image.png')%>" alt="profile picture"> />
+                    </button>
                     <div class="profile__info">
                         <div class="profile__info-top">
                             <h1 class="profile__title">Jacques Cousteau</h1>
@@ -37,7 +39,7 @@
             <div class="modal modal_type_profile modal_closed">
                 <div class="modal__container">
                     <button type="button" class="modal__close-btn modal__close-profile" aria-label="close button" name="close button"></button>
-                    <form class="form" action="/" name="form" novalidate>
+                    <form class="form form-profile" action="/" name="form" novalidate>
                         <fieldset class="form__fieldset">
                             <h2 class="form__title">Edit Profile</h2>
                             <input id="name-input" type="text" name="name" class="form__text-input form__text-input_type_name" minlength="2" maxlength="40" required />
@@ -74,6 +76,7 @@
                         <div class="element__description">
                             <h2 class="element__title"></h2>
                             <button type="button" class="element__like-btn" aria-label="like-button"><img src="<%=require('./images/like-btn.svg')%>" alt="like-btn" /></button>
+                            <span class="element__likes-count"> </span>
                         </div>
                     </div>
                 </div>
@@ -85,7 +88,31 @@
                     <h2 class="modal__title"></h2>
                 </div>
             </div>
-            <script type="module" src="./src/pages/index.js"></script>
         </div>
+        <div class="modal modal_type_delete-card modal_closed">
+            <div class="modal__container">
+                <button type="button" class="modal__close-btn modal__delete-card" aria-label="close button" name="close button"></button>
+                <form class="form form-delete" action="/" name="form__delete">
+                    <fieldset class="form__fieldset">
+                        <h2 class="form__title">Are you sure?</h2>
+                        <button type="submit" name="submit button" class="form__submit-delete">Yes</button>
+                    </fieldset>
+                </form>
+            </div>
+        </div>
+        <div class="modal modal_type_change-picture modal_closed">
+            <div class="modal__container">
+                <button type="button" class="modal__close-btn modal__change-picture" aria-label="close button" name="close button"></button>
+                <form class="form form_change-picture" action="/" name="form__change-picture">
+                    <fieldset class="form__fieldset">
+                        <h2 class="form__title">Change profile picture</h2>
+                        <input id="change-picture-input" type="url" name="link" class="form__text-input form__text-input_type_change-picture" placeholder="profile Url" required />
+                        <span id="change-picture-input-error" class="form__input-error"> </span>
+                        <button type="submit" name="submit button" class="form__change-picture">Save</button>
+                    </fieldset>
+                </form>
+            </div>
+        </div>
+        <script type="module" src="./src/pages/index.js"></script>
     </body>
 </html>
