--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
             <main>
                 <div class="profile">
                     <button class="profile__change-avatar"aria-label="edit picture" name="edit picture" type="button">
-                        <img class="profile__avatar" src="<%=require('./images/image.png')%>" alt="profile picture">
+                        <img class="profile__avatar" src="<%=require('./images/image.png')%>" alt="profile picture"/>
                     </button>
                     <div class="profile__info">
                         <div class="profile__info-top">
