--- a/src/index.html
+++ b/src/index.html
@@ -16,9 +16,10 @@
 
             <main>
                 <div class="profile">
-                    <button class="profile__change-avatar"aria-label="edit picture" name="edit picture" type="button">
-                        <img class="profile__avatar" src="<%=require('./images/image.png')%>" alt="profile picture"/>
+                    <button class="profile__change-avatar" aria-label="edit picture" name="edit picture" type="button">
+                        <img class="profile__avatar" src="<%=require('./images/image.png')%>" alt="profile picture" />
                     </button>
+
                     <div class="profile__info">
                         <div class="profile__info-top">
                             <h1 class="profile__title">Jacques Cousteau</h1>
@@ -29,9 +30,7 @@
                     <button class="profile__add-btn" aria-label="add button" name="add button" type="button"></button>
                 </div>
 
-                <section class="elements">
-                    
-                </section>
+                <section class="elements"></section>
             </main>
             <footer class="footer">
                 <p class="footer__copyright">© 2021 Around The U.S.</p>
